homework1/matrix_mult/matrix_mult/logs/hls_run_csim_3704010.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output /scratch/tsussman/matrix_mult/matrix_mult/matrix_mult.hlsrun_csim_summary, at Mon Mar 16 15:46:44 2026
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir /scratch/tsussman/matrix_mult/matrix_mult -config /scratch/tsussman/matrix_mult/matrix_mult_config.cfg -cmdlineconfig /scratch/tsussman/matrix_mult/matrix_mult/hls/config.cmdline
INFO: [HLS 200-10] For user 'tsussman' on host 'login04.hep.wisc.edu' (Linux_x86_64 version 6.1.166-1.el9.elrepo.x86_64) on Mon Mar 16 15:46:52 CDT 2026
INFO: [HLS 200-10] On os "AlmaLinux release 9.7 (Moss Jungle Cat)"
INFO: [HLS 200-10] In directory '/scratch/tsussman/matrix_mult'
INFO: [HLS 200-2005] Using work_dir /scratch/tsussman/matrix_mult/matrix_mult 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=/scratch/tsussman/matrix_mult.cpp' from /scratch/tsussman/matrix_mult/matrix_mult_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/scratch/tsussman/matrix_mult.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=/scratch/tsussman/matrix_mult_tb.cpp' from /scratch/tsussman/matrix_mult/matrix_mult_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file '/scratch/tsussman/matrix_mult_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=matrix_mult' from /scratch/tsussman/matrix_mult/matrix_mult_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from /scratch/tsussman/matrix_mult/matrix_mult_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xcvu9p-flga2104-2-i' from /scratch/tsussman/matrix_mult/matrix_mult_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xcvu9p-flga2104-2-i'
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from /scratch/tsussman/matrix_mult/matrix_mult_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../matrix_mult_tb.cpp in debug mode
../../../../../matrix_mult_tb.cpp:24:76: error: function definition is not allowed here
        int mult_error_check(const int A[][N], const int B[][N], const int C[][N]){
                                                                                  ^
1 error generated.
make: *** [csim.mk:87: obj/matrix_mult_tb.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 7.55 seconds. Total CPU system time: 2.23 seconds. Total elapsed time: 9.7 seconds; peak allocated memory: 293.230 MB.
